package org.arvinw.example21_1;

public class Bulb {

    public void on(){
        System.out.println("灯亮");
    }
    public void off(){
        System.out.println("灯暗");
    }
}
