package org.arvinw.example21_2;

public interface Command {

    void exe();
    void unexe();
}
